# agentic-contract-review

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  REVIEW.md  langgraph.json  pyproject.toml  railway.toml  skills-lock.json
.claude/skills/demo/: SKILL.md
.claude/skills/policy/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
api/: main.py  rate_limit.py  schemas.py
contract_review_langgraph/: __init__.py  audit.py  checkpointing.py  config.py  graph.py  llm.py  models.py  nodes.py  parsing.py  policies.py  prompts.py  state.py
fixtures/: high_risk_vendor_msa.txt  low_risk_vendor_msa.txt
policies/: default_policy.yaml
spec/: 01-project-charter.md  02-system-design.md  03-proof-to-contract-eval.md  04-demo-script.md  05-delivery-roadmap.md  README.md
tests/: test_durable_resume.py  test_llm_heuristics.py  test_parsing.py  test_policy.py
