[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-contract-review"
version = "0.1.0"
description = "LangGraph Studio contract review workflow with human approval and audit logging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "pydantic>=2.8.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.115.0",
  "pytest>=8.3.0",
  "python-multipart>=0.0.18"
]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["api*", "contract_review_langgraph*"]
